crates/vise/tests/ui/metrics/missing_buckets.stderr
error[E0271]: type mismatch resolving `<Histogram<u64> as BuildMetric>::Builder == MetricBuilder`
 --> tests/ui/metrics/missing_buckets.rs:6:16
  |
6 |     histogram: Histogram<u64>,
  |                ^^^^^^^^^ expected `MetricBuilder`, found `MetricBuilder<Buckets>`
  |
  = note: expected struct `MetricBuilder<()>`
             found struct `MetricBuilder<Buckets>`
